# daypage

./: .env.example  .gitignore  .issue_cache.json  .swiftlint.yml  AGENTS.md  CHANGELOG.md  CLAUDE.md  ISSUE_STATUS.md  Makefile  Web-1.json  Web-2.json  Web-3.json  Web-4.json  Web-5.json  Web-6.json  Web-7.json  Web-8.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prd.json  prd.web-vnext.json  progress.txt  pyproject.toml  todo.md
.claude/: identity.json
.codex/: AGENTS.md
DayPage.xcodeproj/: project.pbxproj
DayPageKit/: Package.swift
DayPageTests/: AccessibilityTests.swift  AppIntentsTests.swift  ArchiveViewModelGroupTests.swift  BackgroundCompilationServiceTests.swift  CJKTextPolishTests.swift  CaptureReminderServiceTests.swift  ComposerContextProviderTests.swift  ConflictMergerTests.swift  DailyPageParserEvidenceTests.swift  DayDetailViewStateTests.swift  DayProgressTests.swift  DoubaoASRResolutionTests.swift  DoubaoASRTests.swift  DoubaoConnectivityTesterTests.swift  EntitySlugDedupTests.swift  EntityTypeSingularTests.swift  GraphSimulationTests.swift  GraphViewModelFilterCacheTests.swift  HapticFeedbackTests.swift  InflightDraftStoreTests.swift  KeychainHelperTests.swift  LLMClientTests.swift  LocationServiceLRUTests.swift  MarkdownExportServiceTests.swift  MemoExifShutterTests.swift  MemoMarkdownTests.swift  MemoSerializationTests.swift  MemoSyncE2EIntegrationTests.swift  MemoSyncUploaderTests.swift  MemoYAMLTests.swift  MemoryChatTests.swift  NetworkMonitorTests.swift  OnThisDayHeaderTests.swift  OnThisDayIntegrationTests.swift  ParserTests.swift  (+27 more)
(+947 files in other folders)
